tests/reference/asr-structs_05-a89315d.stderr
semantic error: StructConstructor arguments do not match the number of struct members
 --> tests/errors/structs_05.py:9:12
  |
9 |     s: S = S(2)
  |            ^^^^ 
